# Youtube_Dowloader

./: .gitignore  README.md  collect_data_onplay_list_test.py  controller_view.py  data_gui_controller.py  data_view.py  download_logic_controller.py  error_message_gui_controller.py  file_reader_controller.py  main.py  main_gui_controller.py  model.py  pyproject.toml  requirement.txt  run.bat  run_ydl.ps1  test_list.txt
