[tool.poetry]
name = "youtube-playlist-downloader-v2"
version = "2"
description = "A simple GUI app to download audio or video on Youtube"
authors = ["LGD"]
readme = "README.md"
packages = [{include = "youtube_playlist_downloader_v2"}]

[tool.poetry.dependencies]
python = "^3.11"
tk = "^0.1.0"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
