[tool.poetry]
name = "youtube-playlist-downloader-v2"
version = "2"
description = "A simple GUI app to download audio or video on Youtube"
authors = ["LGD"]
readme = "README.md"
packages = [{include = "youtube_playlist_downloader_v2"}]

[tool.poetry.dependencies]
python = "^3.11"
tk = "^0.1.0"
pytube = "15.0.0"
ttkbootstrap = "^1.10.1"
pillow = "^10.0.0"
tqdm = "^4.65.2"
cx-freeze = "^6.15.14"
docx = "^0.2.4"
odfpy = "^1.4.1"
pandas = "^2.2.0"
python-docx = "^1.1.0"
pyarrow = "^15.0.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

